--- a/bacula_fd_operator/src/templates/bacula-fd.conf.j2
+++ b/bacula_fd_operator/src/templates/bacula-fd.conf.j2
@@ -15,5 +15,5 @@ FileDaemon {
 
 Messages {
   Name = Standard
-  director = client1-dir = all, !skipped, !restored, !verified, !saved
+  director = {{ director_name }} = all, !skipped, !restored, !verified, !saved
 }
