--- a/bacula_server_operator/src/templates/bacula-sd.conf.j2
+++ b/bacula_server_operator/src/templates/bacula-sd.conf.j2
@@ -5,7 +5,7 @@ Storage {
   Pid Directory = "/opt/bacula/working"
   Plugin Directory = "/opt/bacula/plugins"
   Maximum Concurrent Jobs = 20
-  SDAddress = {{ bacula.sd_address }}                 #! change to the sd public
+  SDAddress = {{ bacula.sd_address }}
 }
 
 Cloud {
