Fix bacula-fd on ubuntu@22.04

--- a/bacula_server_operator/src/templates/bacula-fd.conf.j2
+++ b/bacula_server_operator/src/templates/bacula-fd.conf.j2
@@ -15,5 +15,5 @@ FileDaemon {
 
 Messages {
   Name = Standard
-  director = client1-dir = all, !skipped, !restored, !verified, !saved
+  director = client1-dir = all, !skipped, !restored, !saved
 }
